Bugfix if no pubDate available